fix: fix overflow for wrapper

--- a/src/styles/scss/base/components/base.scss
+++ b/src/styles/scss/base/components/base.scss
@@ -12,7 +12,7 @@ html {
   height: 100%;
   // @include mix.flex(null, null, column);
   @extend %layout;
-  overflow-x: hidden;
+  overflow-x: clip;
 
   // Фикс для слайдеров
   > * {
